--- a/iking.css
+++ b/iking.css
@@ -1,8 +1,16 @@
 html,body {
     font-family: sans-serif;
-    margin: 1;
-    background-color: #ddd;
     height: 100%;
+    background-color: #ddd;
+}
+
+#main {
+    min-height: 100%;
+    height: auto !important
+}
+
+#middle-content{
+    display: flex;
 }
 
 #vspace {
@@ -13,8 +21,8 @@ html,body {
     background-color: #033C5A;
     float: left;
     border-radius: 10px;
+    margin-bottom: 5px;
     padding: 5px;
-    height: 100%;
     width: 20%;
     max-width: 250px;
     color: white;
@@ -45,7 +53,7 @@ a {
     color: #AA9868;
 }
 
-#body a {
+#body-container a {
     color: #80724d;
 }
 
@@ -55,16 +63,16 @@ a {
 }
 
 #body-container{
-    width: 75%;
-    display: table;
-    min-height: 100%;
+    width: 70%;
     padding-left: 10px;
+    padding-right: 10px;
     color: #033C5A;
+    float: right;
 }
 
 #blog-container{
     display: table;
-    min-height: 100%;
+    min-height: calc(100% - 65px - 65px);
     padding-left: 10px;
     color: #033C5A;
 }
@@ -90,13 +98,9 @@ a {
 }
 
 .pdf {
-    width: 15px; 
+    width: 15px;
 }
 
-#body {
-    display: table-cell;
-    /*vertical-align: middle;*/
-}
 
 #headshot {
     text-align: center;
@@ -104,7 +108,7 @@ a {
 
 #footer {
     background-color: #aaa;
-    height: 8%;
+    height: 65px;
     display: table;
     width: 100%;
     border-radius: 5px;
@@ -134,13 +138,13 @@ a {
 }
 
 #toy-container {
-    height: 100px; 
-    width: 100%; 
+
+    width: 100%;
     /*border-style: solid; border-width: 1px; border-color: red;*/
 }
 
 .toy {
-    height: 100px; 
+    height: 100px;
     width:  100px;
     display: inline-block;
     /*border-style: solid; border-width: 1px; border-color: black;*/
@@ -148,11 +152,11 @@ a {
 }
 
 .toy-img {
-    height: 75%; 
+    height: 75%;
     width: 75%;
     border-radius: 5px;
-    margin-left: 12.5%; 
-    margin-right: 12.5%; 
+    margin-left: 12.5%;
+    margin-right: 12.5%;
     margin-top: 0px
 }
 
